# docling-agent-assistant

./: .dockerignore  .env.example  .env.staging  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile  LICENSE  Makefile  PLAN_TECHNIQUE_DOCLING_AGENT.md  Procfile  README.md  alembic.ini  api.py  app.py  cahier_des_charges_premium.md  create_tests.py  docker-compose.yml  mkdocs.yml  nettoyer.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompts_audit_docling.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements-review.txt  requirements.txt  run_api.bat  run_local.bat  run_local.sh  run_pwa.bat  setup.bat  setup.sh
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  tests.yml
.streamlit/: config.toml
AUDIT_BETON/: 01_NETTOYAGE.md  02_CARTOGRAPHIE.md  03_BACKEND.md  04_FRONTEND.md  05_BASE_DE_DONNEES.md  06_SECURITE.md  07_TESTS.md  08_BUILD_DEPLOIEMENT.md  09_PERFORMANCE.md  10_RAPPORT_FINAL.md
Docling_Factures/: 2018 - Raccourci.lnk  2019 - Raccourci.lnk  2020 - Raccourci.lnk  2021 - Raccourci.lnk  2022 - Raccourci.lnk  2023 - Raccourci.lnk  Scan en cours - Raccourci.lnk  factures a refaire - Raccourci.lnk
apps/api/: main.py  pyproject.toml  schema_neon.sql
apps/api/core/: __init__.py  config.py  db_manager.py  orchestrator.py  test_config.py  test_db_manager.py  test_orchestrator.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: a002_add_check_constraints.py  a003_add_fk_fournisseur.py  a004_add_jobs_user_id.py  a006_unique_produits_user_id.py  a007_idx_jobs_user_ck_factures_statut.py  a008_prix_anonymes_community.py
apps/api/schemas/: invoice.py  test_invoice.py
apps/api/services/: bytez_service.py  community_service.py  facturx_extractor.py  gemini_service.py  image_preprocessor.py  storage_service.py  test_auth_service.py  test_gemini_service.py  test_image_preprocessor.py  watchdog_service.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_auth.py  test_batch_save.py
apps/api/tests/data_integrity/: test_transactions.py
apps/api/tests/e2e/: conftest.py  test_catalogue_browse.py
apps/api/tests/integration/: test_database.py  test_storage.py
apps/api/tests/security/: test_auth_bypass.py  test_injection.py  test_isolation.py  test_safe_helpers.py
apps/api/utils/: serializers.py
apps/pwa/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
backend/: schema_neon.sql
backend/core/: config.py  db_manager.py  folder_watcher.py  monitoring.py  orchestrator.py
backend/middleware/: __init__.py  security.py
backend/schemas/: __init__.py  invoice.py
backend/services/: __init__.py  auth_service.py  facturx_extractor.py  gemini_service.py  google_drive_service.py  google_sheets_service.py  image_preprocessor.py  ocr_space_service.py  storage_service.py  watchdog_service.py
backend/tests/: conftest.py  test_security.py
backend/utils/: serializers.py
data/samples/: README.md
design-system/docling/: MASTER.md
docling-pwa/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
docling-pwa/src/: App.jsx  index.css  main.jsx
docs/: 01-ARCHITECTURE.md  02-INSTALLATION.md  03-API.md  04-SERVICES-ET-CONFIG.md  05-AUDIT-BACKEND.md  06-AUDIT-FRONTEND.md  07-ANALYSE-UI.md  08-AVIS-CONCURRENTS.md  09-TESTS.md  10-NOTES-AUDIT.md  12-EXPERT-REPORT.md  13-PLAN-OPTIMISATION.md  AI-INTEGRATION.md  ARBORESCENCE_COMPLETE.txt  AUDIT-POST-PRODUCTION-2026.md  AUDIT-POST-PRODUCTION-MANUEL-2026.md  AUDIT-UX-UI-EXPERT-2026.md  CONTRIBUTING.md  DEVELOPER-ONBOARDING.md  EVALUATION-SENIOR-ULTIME-2026.md  FIX-BUILD-TAILWIND.md  FIX-NPM-TAR-ENTRY-WINDOWS.md  GLOSSARY.md  HOTFIX-3.1-RECAP.md  INVENTAIRE_ANALYSE_PROJET.md  PROJECT-PROFILE.md  README.md  SENTRY-CONFIG.md  SLFG-SWARM-RECAP-2026.md  UI-UX-PRO-MAX-USAGE.md  changelog.md  index.md  serve.ps1  serve.sh  staging-setup.md
docs/REPORTS/: REPOS-ANALYSE-DETAILLEE-2026.md
docs/ai-agents/: usage.md
docs/ai-library/: 01-editors-assistants.md  02-app-builders.md  03-dev-tools.md  04-code-completion.md  05-code-review.md  06-coding-agents.md  07-pr-review.md  08-testing-qa.md  09-documentation.md  10-mcp-integrations.md  11-frameworks.md  12-devops-security.md  README.md
docs/architecture/: ADR-001-stack-technique.md  README.md  backend.md  frontend.md  overview.md  ui-analysis.md
docs/guides/: contributing.md  (+5 more)
migrations/: env.py
scripts/: analyze_emmet_opportunities.py  analyze_spline_opportunities.py  audit-deps.ps1  audit-deps.sh  clean.ps1  clean.sh  db_backup.py  db_restore.py  design_system_docling.py  docker-dev.ps1  docker-dev.sh  fix-npm-windows.ps1  health_check.py  migrate_sqlite_to_postgres.py  pre_launch_check.ps1  pre_launch_check.sh  prettier_precommit.js  release.ps1  release.sh  review.ps1  review.sh  run-audit-beton.ps1  run_dev.sh  setup.ps1  setup.sh  skills_to_prompt.py  test_api.bat  test_api_e2e.py  validate_all.ps1  validate_all.sh  validate_env.py  validate_skills.py  verify_project.ps1  verify_project.sh
tests/: AUDIT POST-PRODUCTION EXPERT — DOCLING AGENT v3.md  conftest.py  requirements-test.txt
(+149 files in other folders)
