[project]
name = "docling-agent-assistant"
version = "2.0.0"
description = "Catalogue de prix BTP — extraction IA de factures"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "pandas>=2.0",
    "streamlit==1.38.0",
    "openpyxl>=3.1",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 30
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%H:%M:%S"
addopts = "--strict-markers -v --tb=short --durations=10 --capture=no"
filterwarnings = [
    "ignore::DeprecationWarning:faker",
    "ignore::pytest.PytestConfigWarning",
]
markers = [
    "slow: tests > 5 secondes",
    "security: tests de sécurité",
    "e2e: tests end-to-end (Playwright)",
    "performance: tests de performance",
    "external: tests avec services externes (Gemini, Storj)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]
