[project]
# Racine monorepo — API principale dans apps/api (uv)
name = "docling"
version = "3.0.0"
description = "Catalogue BTP — extraction IA de factures"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mkdocs>=1.6", "mkdocs-material>=9.7"]

[tool.pytest.ini_options]
testpaths = ["apps/api"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 30
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%H:%M:%S"
addopts = "--strict-markers -v --tb=short --durations=10 --capture=no"
filterwarnings = [
    "ignore::DeprecationWarning:faker",
    "ignore::pytest.PytestConfigWarning",
]
markers = [
    "slow: tests > 5 secondes",
    "security: tests de sécurité",
    "e2e: tests end-to-end (Playwright)",
    "performance: tests de performance",
    "external: tests avec services externes (Gemini, Storj)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]
