[project]
name = "docling-api"
version = "3.0.0"
description = "Catalogue de prix BTP — extraction IA de factures"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.31",
    "google-genai>=1.64,<2",
    "httpx>=0.27",
    "opencv-python-headless>=4.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.13",
    "watchdog>=5.0",
    "boto3>=1.40",
    "factur-x>=3.15",
    "PyJWT>=2.10",
    "argon2-cffi>=25.1",
    "sentry-sdk[fastapi]>=2.53",
    "slowapi>=0.1",
    "alembic>=1.18",
    "python-dotenv>=1.0",
    "python-multipart>=0.0",
    "lxml>=5.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.2",
    "pytest-cov",
    "ruff>=0.4",
    "httpx>=0.27",
    "faker>=30",
    "psycopg2-binary>=2.9",
    "playwright>=1.49",
    "locust>=2.32",
    "aiohttp>=3.11",
    "pytest-timeout>=2.3",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
    "faker",
    "playwright>=1.49",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests", "core", "services", "schemas"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 30
addopts = "--strict-markers -v --tb=short --durations=10 --capture=no"
markers = [
    "slow: tests > 5 secondes",
    "security: tests de sécurité",
    "e2e: tests end-to-end (Playwright)",
    "performance: tests de performance",
    "external: tests avec services externes (Gemini, Storj)",
]
